# dca-simulation

./: .gitignore  IMPLEMENTATION_INSTRUCTIONS.md  MODULAR_TEST_UTILITIES.md  README.md  README_FOR_AI_AGENT.md  pyproject.toml  requirements.txt  run_market_sell_simulation.py  test_phase1.py
.streamlit/: config.toml
configs/: multi_path_example.yml  twap_vs_dutch.yml
results/multi_path_twap/: TwapMarket_run_0.json  TwapMarket_run_1.json  TwapMarket_run_2.json  TwapMarket_run_3.json  TwapMarket_run_4.json  TwapMarket_summary.json
results/streamlit_exports/: paths_100_144034.json
results/twap_dutch_sample/: DutchLimit_run_0.json  DutchLimit_summary.json  TwapMarket_run_0.json  TwapMarket_summary.json
scripts/: analyze_multi_path_results.py  analyze_order_size_hypothesis.py  generate_visualizations.py
src/: simulation.py
src/config/: factory.py
src/core/: events.py  orders.py
src/cost/: filler.py  gas_model.py
src/dca_simulation.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/engine/: dutch_aware_matching.py  matching.py
src/market/: const_spread.py  dutch_impact.py  gbm.py  linear_impact.py  percentage_impact.py  protocols.py  realistic_impact.py
src/metrics/: fill_prices.py  fill_timings.py  protocols.py
src/strategy/: growing_dutch_limit.py  protocols.py  true_dutch_limit.py  twap_market.py
src/test_utils/: __init__.py  analysis.py  analyzers.py  engines.py  multipath.py  simulation.py  strategies.py  visualization.py
streamlit_app/: __init__.py  main.py
streamlit_app/components/: __init__.py  gbm_explorer.py  impact_model_explorer.py  path_manager.py  single_order_execution.py  strategy_execution.py
streamlit_app/utils/: __init__.py  plotting.py  simulation_bridge.py
tests/: generate_gbm_fan_analysis.py  test_dutch_orders_gbm_simulation.py  test_market_orders_gbm_simulation.py
